--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,109 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Open+Sans&family=PT+Sans:wght@400;700&display=swap');
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+    /* Colores */
+    --negro : #070707;
+    --negro-claro : #1b1a1a;
+    --gris-oscuro: #131111;
+    --gris: #1f1d1d;
+    --transparente-gris-claro: rgba(180, 161, 161, 0.165);
+    --transparente-gris: rgba(19, 17, 17, 0.5);
+    --blanco: #e4dada;
+    --dorado: #D4AF37;
+    --dorado-opaco: #a39156;
+    --verde: #327525;
+    --verde-claro: #2a8f16;
+    --rojo: #9e0e0e;
+    --rojo-claro: #c41313;
+    --celeste: #2f419b;
+    --celeste-claro: #1864ab;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+    --scroll-behavior: smooth;
+    /* Fuentes */
+    --letra-chica: 400;
+    --letra-grande: 700;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+html {
+    box-sizing: border-box;
 }
-
+body {
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 108px;
+    background-color: var(--gris);
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+a { text-decoration: none; }
+/* Para que los input type number no tengan flechas */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+/* Para que los input type number no tengan flechas en mozilla*/
+input[type=number] {
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    margin: 0;
+    padding: 0;
+    font-family: 'Lora', serif;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.contenedor {
+    width: 85%;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1 {
+    color: var(--blanco);
+    font-weight: var(--letra-chica);
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+h4 {
+    color: var(--dorado-opaco);
+    font-weight: var(--letra-chica);
+    font-size: 35px;
+    text-align: center;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.alinear-medio { 
+    align-items: center;
+    justify-content: center; 
+}
+.alinear-derecha { 
+    align-items: center; 
+    justify-content: flex-end;
+}
+.alinear-izquierda { 
+    align-items: flex-start; 
+    justify-content: flex-start;
+}
+.alinear-costados { 
+    align-items: center; 
+    justify-content: space-between;
+}
+.column { flex-direction: column; }
+.gp-10 { gap: 10px; }
+.gp-15 { gap: 15px; }
+.block { display: block; }
+.mt-5 { margin-top: 5px;}
+.w-95 { width: 95%; }
+.w-70 { width: 70%; }
+.border {
+    border: 1px solid var(--blanco);
+    border-radius: 10px;
+}
+.modal--activo {
+    opacity: 1;
+    visibility: visible;
+}
+#enviar.desactivado {
+    cursor: not-allowed;
+    background-color: transparent;
+    border: 1px solid var(--verde-claro);
+}
+div button.reservado {
+    background-color: red;
+    border: 1px solid red;
 }
