--- a/src/styles/Botones.module.css
+++ b/src/styles/Botones.module.css
@@ -18,6 +18,7 @@
     background-color: var(--rojo);
     margin: 16px 0;
     border-radius: 15px;
+    border: none;
     transition: all .5s;
 }
 .rojo:hover { background-color: var(--rojo-claro); }
