--- a/src/styles/Fecha.module.css
+++ b/src/styles/Fecha.module.css
@@ -110,7 +110,11 @@
     border-radius: 5px;
     height: 30px;
     width: 30px;
-    transition: .2s all;
+    transition: .3s all;
+}
+.detalleTurno button[disabled] { pointer-events: none; }
+.detalleTurno button:hover {
+    background-color: var(--verde);
 }
 .fechaActivo {
     background-color: var(--verde);
@@ -135,4 +139,21 @@
     text-align: center;
     margin: 5px 0;
     border-radius: 15px;
+}
+.modalReservaBotones {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+.modalReservaParrafos p {
+    color: var(--blanco);
+    text-align: center;
+}
+.modalReservaParrafos p:first-child {
+    margin-bottom: 15px;
+}
+.reservaTitulo {
+    color: var(--blanco);
+    font-size: 20px;
 }
