--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -14,6 +14,9 @@
     text-decoration: none;
     color: var(--dorado);
     font-size: 18px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 .navLista { 
     list-style: none; 
